--- a/open-data.bib
+++ b/open-data.bib
@@ -1,3 +1,20 @@
+@article{Lichtman2014,
+abstract = {The structure of the nervous system is extraordinarily complicated because individual neurons are interconnected to hundreds or even thousands of other cells in networks that can extend over large volumes. Mapping such networks at the level of synaptic connections, a field called connectomics, began in the 1970s with a the study of the small nervous system of a worm and has recently garnered general interest thanks to technical and computational advances that automate the collection of electron-microscopy data and offer the possibility of mapping even large mammalian brains. However, modern connectomics produces 'big data', unprecedented quantities of digital information at unprecedented rates, and will require, as with genomics at the time, breakthrough algorithmic and computational solutions. Here we describe some of the key difficulties that may arise and provide suggestions for managing them.},
+author = {Lichtman, Jeff W and Pfister, Hanspeter and Shavit, Nir},
+doi = {10.1038/nn.3837},
+file = {:Users/ian/Library/Application Support/Mendeley Desktop/Downloaded/Lichtman, Pfister, Shavit - 2014 - The big data challenges of connectomics.pdf:pdf},
+issn = {1546-1726},
+journal = {Nature neuroscience},
+month = {nov},
+number = {11},
+pages = {1448--54},
+pmid = {25349911},
+publisher = {NIH Public Access},
+title = {{The big data challenges of connectomics.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/25349911 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC4412267},
+volume = {17},
+year = {2014}
+}
 @article{Benson2013,
 author = {Benson, D. A. and Cavanaugh, M. and Clark, K. and Karsch-Mizrachi, I. and Lipman, D. J. and Ostell, J. and Sayers, E. W.},
 doi = {10.1093/nar/gks1195},
@@ -489,4 +506,18 @@ title = {{Addressing Global Data Sharing Challenges.}},
 url = {http://www.ncbi.nlm.nih.gov/pubmed/26297753 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC4547313},
 volume = {10},
 year = {2015}
+}
+@article{CERN-DATA,
+archivePrefix = {arXiv},
+arxivId = {https://arxiv.org/abs/0912.0255},
+author = {CERN},
+eprint = {/arxiv.org/abs/0912.0255},
+file = {:Users/ian/Library/Application Support/Mendeley Desktop/Downloaded/Unknown - 2009 - Data Preservation in High-Energy Physics.pdf:pdf},
+keywords = {DPHEP-2009-001},
+mendeley-tags = {DPHEP-2009-001},
+number = {May},
+pages = {1--18},
+primaryClass = {https:},
+title = {{Data Preservation in High-Energy Physics}},
+year = {2009}
 }
