--- a/open-data.bib
+++ b/open-data.bib
@@ -1,8 +1,33 @@
+@article{CERN-DATA,
+archivePrefix = {arXiv},
+arxivId = {https://arxiv.org/abs/0912.0255},
+author = {CERN},
+eprint = {/arxiv.org/abs/0912.0255},
+file = {::},
+keywords = {DPHEP-2009-001},
+mendeley-tags = {DPHEP-2009-001},
+number = {May},
+pages = {1--18},
+primaryClass = {https:},
+title = {{Data Preservation in High-Energy Physics}},
+year = {2009}
+}
+@article{wilson2016,
+author = {Wilson, Greg},
+doi = {10.12688/f1000research.3-62.v2},
+issn = {2046-1402},
+journal = {F1000Research},
+month = {jan},
+title = {{Software Carpentry: lessons learned}},
+url = {http://f1000research.com/articles/3-62/v2},
+volume = {3},
+year = {2016}
+}
 @article{Lichtman2014,
 abstract = {The structure of the nervous system is extraordinarily complicated because individual neurons are interconnected to hundreds or even thousands of other cells in networks that can extend over large volumes. Mapping such networks at the level of synaptic connections, a field called connectomics, began in the 1970s with a the study of the small nervous system of a worm and has recently garnered general interest thanks to technical and computational advances that automate the collection of electron-microscopy data and offer the possibility of mapping even large mammalian brains. However, modern connectomics produces 'big data', unprecedented quantities of digital information at unprecedented rates, and will require, as with genomics at the time, breakthrough algorithmic and computational solutions. Here we describe some of the key difficulties that may arise and provide suggestions for managing them.},
 author = {Lichtman, Jeff W and Pfister, Hanspeter and Shavit, Nir},
 doi = {10.1038/nn.3837},
-file = {:Users/ian/Library/Application Support/Mendeley Desktop/Downloaded/Lichtman, Pfister, Shavit - 2014 - The big data challenges of connectomics.pdf:pdf},
+file = {::},
 issn = {1546-1726},
 journal = {Nature neuroscience},
 month = {nov},
@@ -118,7 +143,7 @@ year = {2010}
 @article{Wilkinson2016,
 author = {Wilkinson, Mark D. and Dumontier, Michel and Aalbersberg, IJsbrand Jan and Appleton, Gabrielle and Axton, Myles and Baak, Arie and Blomberg, Niklas and Boiten, Jan-Willem and {da Silva Santos}, Luiz Bonino and Bourne, Philip E. and Bouwman, Jildau and Brookes, Anthony J. and Clark, Tim and Crosas, Merc{\`{e}} and Dillo, Ingrid and Dumon, Olivier and Edmunds, Scott and Evelo, Chris T. and Finkers, Richard and Gonzalez-Beltran, Alejandra and Gray, Alasdair J.G. and Groth, Paul and Goble, Carole and Grethe, Jeffrey S. and Heringa, Jaap and {'t Hoen}, Peter A.C and Hooft, Rob and Kuhn, Tobias and Kok, Ruben and Kok, Joost and Lusher, Scott J. and Martone, Maryann E. and Mons, Albert and Packer, Abel L. and Persson, Bengt and Rocca-Serra, Philippe and Roos, Marco and van Schaik, Rene and Sansone, Susanna-Assunta and Schultes, Erik and Sengstag, Thierry and Slater, Ted and Strawn, George and Swertz, Morris A. and Thompson, Mark and van der Lei, Johan and van Mulligen, Erik and Velterop, Jan and Waagmeester, Andra and Wittenburg, Peter and Wolstencroft, Katherine and Zhao, Jun and Mons, Barend and Roche, D. G. and Kruuk, L. E. B. and Lanfear, R. and Binning, S. A. and Bechhofer, S. and Benson, D. A. and Berman, H. and Henrick, K. and Nakamura, H. and Wenger, M. and Crosas, M. and White, H. C. and Carrier, S. and Thompson, A. and Greenberg, J. and Scherle, R. and Lecarpentier, D. and Martone, M. E. and White, E. and Sandve, G. K. and Nekrutenko, A. and Taylor, J. and Hovig, E. and Wolstencroft, K. and Bauch, A. and Sansone, S.-A. and Gonz{\'{a}}lez-Beltr{\'{a}}n, A. and Maguire, E. and Sansone, S.-A. and Rocca-Serra, P. and Gonz{\'{a}}lez-Beltr{\'{a}}n, A. and Harland, L. and Groth, P. and Berman, H. M. and Bourne, P. E. and Berman, H. M. and Watenpaugh, K. and Westbrook, J. D. and Fitzgerald, P. M. D. and Rose, P. W. and Kinjo, A. R. and Gutmanas, A. and Starr, J. and Musen, M. A.},
 doi = {10.1038/sdata.2016.18},
-file = {:Users/ian/Library/Application Support/Mendeley Desktop/Downloaded/Wilkinson et al. - 2016 - The FAIR Guiding Principles for scientific data management and stewardship.pdf:pdf},
+file = {::},
 issn = {2052-4463},
 journal = {Scientific Data},
 month = {mar},
@@ -133,7 +158,7 @@ year = {2016}
 abstract = {The Science as an open enterprise report highlights the need to grapple with the huge deluge of data created by modern technologies in order to preserve the principle of openness and to exploit data in ways that have the potential to create a second open science revolution. Exploring massive amounts of data using modern digital technologies has enormous potential for science and its application in public policy and business. The report maps out the changes that are required by scientists, their institutions and those that fund and support science if this potential is to be realised.},
 author = {Boulton, Geoffrey and Campbell, Philip and Collins, Brian and Elias, Peter and Hall, Wendy and Graeme, Laurie and O'Neill, Onora and Rawlins, Michael and Thornton, Janet and Vallance, Patrick and Walport, Mark},
 booktitle = {Science},
-file = {:Users/ian/mendeley-watch-folder/2012-06-20-SAOE.pdf:pdf},
+file = {::},
 isbn = {9780854039623},
 issn = {0960-085X, 0960-085X},
 number = {June},
@@ -145,7 +170,7 @@ year = {2012}
 @article{RCKUOpen,
 abstract = {This document contains the substantive text of the Concordat On Open Research Data that$\backslash$nhas been developed by a UK multi-stakeholder group. This concordat will help to ensure that$\backslash$nthe research data gathered and generated by members of the UK research community is made$\backslash$nopenly available for use by others wherever possible in a manner consistent with relevant legal,$\backslash$nethical and regulatory frameworks and norms},
 author = {RCUK},
-file = {:Users/ian/mendeley-watch-folder/ConcordatonOpenResearchData.pdf:pdf},
+file = {::},
 keywords = {Funder Policy,RCUK,Research Data},
 number = {July},
 title = {{Concordat On Open Research Data - Version 10}},
@@ -155,7 +180,7 @@ year = {2015}
 author = {Goodman, Alyssa and Pepe, Alberto and Blocker, Alexander W. and Borgman, Christine L. and Cranmer, Kyle and Crosas, Merce and {Di Stefano}, Rosanne and Gil, Yolanda and Groth, Paul and Hedstrom, Margaret and Hogg, David W. and Kashyap, Vinay and Mahabal, Ashish and Siemiginowska, Aneta and Slavkovic, Aleksandra and Galilei, G and Wren, JD and Barnes, N and Shamir, L and Wallin, JF and Allen, A and Berriman, B and Teuben, P and Prli{\'{c}}, A and Procter, JB and Chavan, V and Penev, L and Wallis, JC and Rolando, E and Borgman, CL},
 doi = {10.1371/journal.pcbi.1003542},
 editor = {Bourne, Philip E.},
-file = {:Users/ian/Library/Application Support/Mendeley Desktop/Downloaded/Goodman et al. - 2014 - Ten Simple Rules for the Care and Feeding of Scientific Data(2).pdf:pdf},
+file = {::},
 issn = {1553-7358},
 journal = {PLoS Computational Biology},
 month = {apr},
@@ -178,37 +203,13 @@ url = {http://blogs.nature.com/scientificdata/2016/08/04/the-10-principles-of-op
 urldate = {2016-08-09},
 year = {2016}
 }
-@book{Moedas2015,
-author = {Moedas, Carlos},
-doi = {10.2777/061652},
-file = {:Users/ian/mendeley-watch-folder/KI0416263ENN{\_}002.pdf:pdf},
-isbn = {9789279573460},
-title = {{Open Innovation, Open Science, Open to the World}},
-url = {http://europa.eu/rapid/press-release{\_}SPEECH-15-5243{\_}en.htm},
-year = {2015}
-}
-@article{Eisen,
-abstract = {Research papers are the primary tangible and lasting output of science. It is how we communicate our discoveries, and how we are evaluated for hiring, promotion, and prizes. The current system by which most scientific papers are published predates the Internet by several hundred years, has changed little over centuries, and has largely failed to take advantage of new technologies enabled by the internet.},
-author = {Eisen, Michael and Vosshall, Leslie B},
-file = {:Users/ian/mendeley-watch-folder/Eisen{\_}Vosshall{\_}PrePrints{\_}PPPR.pdf:pdf},
-pages = {1--4},
-title = {{Coupling Pre-Prints and Post-Publication Peer Review for Fast , Cheap , Fair , and Effective Science Publishing}}
-}
-@article{KnowledgeExchange2016,
-author = {{Knowledge Exchange}},
-file = {:Users/ian/mendeley-watch-folder/KE{\_}SCIENCE{\_}EUROPE{\_}RDM{\_}2016.pdf:pdf},
-number = {May},
-title = {{Funding research data management and related infrastructures}},
-url = {http://repository.jisc.ac.uk/6402/1/Funding{\_}RDM{\_}{\&}{\_}Related{\_}Infratsructures{\_}MAY2016{\_}v7.pdf},
-year = {2016}
-}
 @article{Fallis2016,
 archivePrefix = {arXiv},
 arxivId = {arXiv:1011.1669v3},
 author = {Fallis, A.G},
 doi = {10.1017/CBO9781107415324.004},
 eprint = {arXiv:1011.1669v3},
-file = {:Users/ian/mendeley-watch-folder/1602.00370v2.pdf:pdf},
+file = {::},
 isbn = {9788578110796},
 issn = {1098-6596},
 journal = {Www},
@@ -218,10 +219,38 @@ pmid = {25246403},
 title = {{Visualizing Large-scale and High-demensional Data}},
 year = {2016}
 }
+@article{,
+file = {::},
+title = {{on Open Science}}
+}
+@article{KnowledgeExchange2016,
+author = {{Knowledge Exchange}},
+file = {::},
+number = {May},
+title = {{Funding research data management and related infrastructures}},
+url = {http://repository.jisc.ac.uk/6402/1/Funding{\_}RDM{\_}{\&}{\_}Related{\_}Infratsructures{\_}MAY2016{\_}v7.pdf},
+year = {2016}
+}
+@article{Acharya2015,
+abstract = {10th International Conference on Open Repositories OR2015 Keynote Powerpoint},
+author = {Acharya, Anurag},
+file = {::},
+title = {{Indexing Repositories : Pitfalls {\&} Best Practices Web search {\&} Scholar}},
+year = {2015}
+}
+@book{Moedas2015,
+author = {Moedas, Carlos},
+doi = {10.2777/061652},
+file = {::},
+isbn = {9789279573460},
+title = {{Open Innovation, Open Science, Open to the World}},
+url = {http://europa.eu/rapid/press-release{\_}SPEECH-15-5243{\_}en.htm},
+year = {2015}
+}
 @article{Jubb2016,
 author = {Jubb, Michael},
 doi = {10.1002/leap.1008},
-file = {:Users/ian/mendeley-watch-folder/Jubb-2016-Learned{\_}Publishing.pdf:pdf},
+file = {::},
 issn = {09531513},
 journal = {Learned Publishing},
 number = {October 2015},
@@ -232,11 +261,17 @@ year = {2016}
 }
 @article{Moore2016,
 author = {Moore, Samuel and Neylon, Cameron and Eve, Martin Paul and Donnell, Daniel Paul O and Pattinson, Damian},
-file = {:Users/ian/mendeley-watch-folder/ExcellenceRUs.pdf:pdf},
+file = {::},
 journal = {Palgrave Communications (submitted)},
 pages = {1--38},
 title = {{Excellence R Us: University Research and the Fetishisation of Excellence}},
 year = {2016}
+}
+@article{Unseen,
+author = {Unseen, The and Behind, Labor and Infrastructure, Our Digital},
+file = {::},
+journal = {Brill's New Pauly},
+title = {{Roads and bridges, construction of}}
 }
 @article{Bhardwaj2015,
 abstract = {Relational databases have limited support for data collaboration, where teams collaboratively curate and analyze large datasets. Inspired by software version control systems like git, we propose (a) a dataset version control system, giving users the ability to create, branch, merge, difference and search large, divergent collections of datasets, and (b) a platform, DataHub, that gives users the ability to perform collaborative data analysis building on this version control system. We outline the challenges in providing dataset version control at scale.},
@@ -244,33 +279,23 @@ archivePrefix = {arXiv},
 arxivId = {1409.0798},
 author = {Bhardwaj, Anant and Bhattacherjee, Souvik and Chavan, Amit and Deshpande, Amol and Elmore, Aaron J. and Madden, Samuel and Parameswaran, Aditya G.},
 eprint = {1409.0798},
-file = {:Users/ian/mendeley-watch-folder/1409.0798v1.pdf:pdf},
+file = {::},
 journal = {Cidr 2015},
 pages = {7},
 title = {{DataHub: Collaborative Data Science {\&} Dataset Version Management at Scale}},
 url = {http://arxiv.org/abs/1409.0798},
 year = {2015}
 }
-@article{Unseen,
-author = {Unseen, The and Behind, Labor and Infrastructure, Our Digital},
-file = {:Users/ian/mendeley-watch-folder/roads-and-bridges-the-unseen-labor-behind-our-digital-infrastructure.pdf:pdf},
-journal = {Brill's New Pauly},
-title = {{Roads and bridges, construction of}}
-}
-@article{,
-file = {:Users/ian/mendeley-watch-folder/amsterdam-call-for-action-on-open-science.pdf:pdf},
-title = {{on Open Science}}
-}
-@article{Acharya2015,
-abstract = {10th International Conference on Open Repositories OR2015 Keynote Powerpoint},
-author = {Acharya, Anurag},
-file = {:Users/ian/mendeley-watch-folder/or-2015-anurag-google-scholar.pdf:pdf},
-title = {{Indexing Repositories : Pitfalls {\&} Best Practices Web search {\&} Scholar}},
-year = {2015}
+@article{Eisen,
+abstract = {Research papers are the primary tangible and lasting output of science. It is how we communicate our discoveries, and how we are evaluated for hiring, promotion, and prizes. The current system by which most scientific papers are published predates the Internet by several hundred years, has changed little over centuries, and has largely failed to take advantage of new technologies enabled by the internet.},
+author = {Eisen, Michael and Vosshall, Leslie B},
+file = {::},
+pages = {1--4},
+title = {{Coupling Pre-Prints and Post-Publication Peer Review for Fast , Cheap , Fair , and Effective Science Publishing}}
 }
 @article{Borgman2014,
 author = {Borgman, Cl},
-file = {:Users/ian/mendeley-watch-folder/fulltext{\_}stamped.pdf:pdf},
+file = {::},
 number = {February},
 title = {{The Role of Data Citation in Scholarly Communication}},
 url = {http://works.bepress.com/cgi/viewcontent.cgi?article=1438{\&}context=borgman},
@@ -308,7 +333,7 @@ year = {2011}
 author = {Cummings, Jorden A. and Zagrodney, Jessica M. and Day, T. Eugene and Molloy, JC and Gurstein, MB and Harrison, C and Ross, JS and Krumholtz, HM and Drazen, JM and Josephson, SA and Johnston, SC and Hauser, SL and Koenig, F and Slattery, J and Groves, T and Lang, T and Benjamini, Y and Day, S and Bastian, H and Glasziou, P and Chalmers, I and Murray-Rust, P and Callaway, E and Braun, V and Clarke, V and Sweeney, L and Hand, DJ and Tucker, A. and Anderlik, M and Rothstein, MA and Hayden, EC and Harth, SC and Thong, YH and Corrigan, O and Krause, T and Collen, W and Nicholas, KA and Mann, T and Desch, K and Li, J and Kim, S and Laventhal, N and Metzger, K and Siemieniak, D and Ginsburg, D and Stanley, BH and Guido, JR and Stanley, B and Brody, JL and Cluck, JP and Aragon, AS and Varnhagen, CK and Kramer, AD and Guillory, JE and Hancock, JT and Verna, IM and O'Neil, KM and Penrod, SD and Bornstein, BH and Fiske, ST and Dupree, C and Pollach, I and Miyazaki, AD and Fernandez, A and Beltramini, RF and Visions, TJ and Li, J and Berry, DM},
 doi = {10.1371/journal.pone.0125208},
 editor = {Metcalfe, John Z},
-file = {:Users/ian/Library/Application Support/Mendeley Desktop/Downloaded/Cummings et al. - 2015 - Impact of Open Data Policies on Consent to Participate in Human Subjects Research Discrepancies between Partici.pdf:pdf},
+file = {::},
 issn = {1932-6203},
 journal = {PLOS ONE},
 month = {may},
@@ -324,7 +349,7 @@ year = {2015}
 abstract = {Open access, open data, open source and other open scholarship practices are growing in popularity and necessity. However, widespread adoption of these practices has not yet been achieved. One reason is that researchers are uncertain about how sharing their work will affect their careers. We review literature demonstrating that open research is associated with increases in citations, media attention, potential collaborators, job opportunities and funding opportunities. These findings are evidence that open research practices bring significant benefits to researchers relative to more traditional closed practices.},
 author = {McKiernan, Erin C and Bourne, Philip E and Brown, C Titus and Buck, Stuart and Kenall, Amye and Lin, Jennifer and McDougall, Damon and Nosek, Brian A and Ram, Karthik and Soderberg, Courtney K and Spies, Jeffrey R and Thaney, Kaitlin and Updegrove, Andrew and Woo, Kara H and Yarkoni, Tal and Adie, E. and AllTrials and Biology, American Society for Cell and Antelman, K. and ASAPbio and AsPredicted and Atchison, A. and Bull, J. and Berg, JM. and Bhalla, N. and Bourne, PE. and Chalfie, M. and Drubin, DG. and Fraser, JS. and Greider, CW. and Hendricks, M. and Jones, C. and Kiley, R. and King, S. and Kirschner, MW. and Krumholz, HM. and Lehmann, R. and Leptin, M. and Pulverer, B. and Rosenzweig, B. and Spiro, JE. and Stebbins, M. and Strasser, C. and Swaminathan, S. and Turner, P. and Vale, RD. and VijayRaghavan, K. and Wolberger, C. and Foundation, Bill {\&} Melinda Gates and Biosharing.org and Bj{\"{o}}rk, B-C. and Bj{\"{o}}rk, B-C. and Laakso, M. and Welling, P. and Paetau, P. and Bj{\"{o}}rk, B-C. and Solomon, D. and Bohannon, J. and Bohannon, J. and Borgman, CL. and Darch, PT. and Sands, AE. and Pasquetto, IV. and Golshan, MS. and Wallis, JC. and Traweek, S. and Bornmann, L. and Mutz, R. and Daniel, HD. and Brembs, B. and Button, K. and Munaf{\`{o}}, M. and Brenner, S. and Brown, C. and Brown, CT. and Howe, A. and Zhang, Q. and Pyrkosz, AB. and Brom, TH. and Science, Center for Open and CERN and Chan, L. and Cuplinskas, D. and Eisen, M. and Friend, F. and Genova, Y. and Gu{\'{e}}don, J-C. and Hagemann, M. and Harnad, S. and Johnson, R. and Kupryte, R. and Manna, M. La and R{\'{e}}v, I. and Segbert, M. and de Souza, S. and Suber, P. and Velterop, J. and Chavan, V. and Penev, L. and Ltd, Cofactor and COMPare and of Amsterdam, Court and Crawford, W. and Commons, Creative and Darch, PT. and Borgman, CL. and Traweek, S. and Cummings, RL. and Wallis, JC. and Sands, AE. and Group, Data Citation Synthesis and Davis, P. and Fromerth, M. and Davis, PM. and Lewenstein, BV. and Simon, DH. and Booth, JG. and Connolly, MJL. and Davis, PM. and Desjardins-Proulx, P. and White, EP. and Adamson, JJ. and Ram, K. and Poisot, T. and Gravel, D. and Donovan, JM. and Watson, CA. and Osborne, C. and Dorch, SBF. and Drachen, TM. and Ellegaard, O. and Project, Eigenfactor and Eysenbach, G. and Frandsen, TF. and Frandsen, TF. and Gargouri, Y. and Hajjem, C. and Larivi{\`{e}}re, V. and Gingras, Y. and Carr, L. and Brody, T. and Harnad, S. and Garlick, M. and Garlick, M. and Gaul{\'{e}}, P. and Maystre, N. and Gentil-Beccot, A. and Mele, S. and Brooks, TC. and Gleditsch, NP. and Metelits, C. and Strand, H. and Gorgolewski, K. and Esteban, O. and Burns, C. and Ziegler, E. and Pinsard, B. and Madison, C. and Waskom, M. and Ellis, DG. and Clark, D. and Dayan, M. and Manh{\~{a}}es-Savio, A. and Notter, MP. and Johnson, H. and Dewey, YO. and Hamalainen, C. and Keshavan, A. and Clark, D. and Huntenburg, JM. and Hanke, M. and Nichols, BN. and Wassermann, D. and Eshaghi, A. and Markiewicz, C. and Varoquaux, G. and Acland, B. and Forbes, J. and Rokem, A. and Kong, X-Z. and Gramfort, A. and Kleesiek, J. and Schaefer, A. and Sikka, S. and Perez-Guevara, MF. and Glatard, T. and Iqbal, S. and Liu, S. and Welch, D. and Sharp, P. and Warner, J. and Kastman, E. and Lampe, L. and Perkins, LN. and Craddock, RC. and K{\"{u}}ttner, R. and Bielievtsov, D. and Geisler, D. and Gerhard, S. and Liem, F. and Linkersd{\"{o}}rfer, J. and Margulies, DS. and Andberg, SK. and Stadler, J. and Steele, CJ. and Broderick, W. and Cooper, G. and Floren, A. and Huang, L. and Gonzalez, I. and McNamee, D. and Orfanos, D. Papadopoulos and Pellman, J. and Triplett, W. and Ghosh, S. and Gorgolewski, KJ. and Margulies, DS. and Milham, MP. and Gorgolewski, KJ. and Poldrack, R. and Gunasekaran, S. and Arunachalam, S. and Haak, LL. and Fenner, M. and Paglione, L. and Pentz, E. and Ratner, H. and Hajjem, C. and Harnad, S. and Gingras, Y. and Harnad, S. and Brody, T. and {Harvard Library}, Office for Scholarly Communication and {Harvard Library}, Office for Scholary Communication and Project, Harvard Open Access and Heimst{\"{a}}dt, M. and Saunderson, F. and Heath, T. and Henneken, EA. and Accomazzi, A. and Hitchcock, S. and Holdren, JP. and Ince, DC. and Hatton, L. and Graham-Cumming, J. and Indianapolis, Indiana University-Purdue University and Joseph, H. and and Control, Journal of Vibration and {Juzgado de Primera Instancia N{\'{u}}mero Seis de Badajoz}, Espa{\~{n}}a and Kaplan, RM. and Irvin, VL. and Kidwell, MC. and Lazarevi{\'{c}}, LB. and Baranski, E. and Hardwicke, TE. and Piechowski, S. and Falkenberg, LS. and Kennett, C. and Slowik, A. and Sonnleitner, C. and Hess-Holden, C. and Errington, TM. and Fiedler, S. and Nosek, BA. and Kiernan, V. and Klein, RA. and Ratliff, KA. and Vianello, M. and Adams, RB. and Bahn{\'{i}}k, {\v{S}}. and Bernstein, MJ. and Bocian, K. and Brandt, MJ. and Brooks, B. and Brumbaugh, CC. and Cemalcilar, Z. and Chandler, J. and Cheong, W. and Davis, WE. and Devos, T. and Eisner, M. and Frankowska, N. and Furrow, D. and Galliani, EM. and Hasselman, F. and Hicks, JA. and Hovermale, JF. and Hunt, SJ. and Huntsinger, JR. and IJzerman, H. and John, M-S. and Joy-Gaba, JA. and Kappes, H. Barry and Krueger, LE. and Kurtz, J. and Levitan, CA. and Mallett, RK. and Morris, WL. and Nelson, AJ. and Nier, JA. and Packard, G. and Pilati, R. and Rutchick, AM. and Schmidt, K. and Skorinko, JL. and Smith, R. and Steiner, TG. and Storbeck, J. and Swol, LM. Van and Thompson, D. and Veer, AE. van ‘t and Vaughn, LA. and Vranka, M. and Wichman, AL. and Woodzicka, JA. and Nosek, BA. and Koler-Povh, T. and Ju{\v{z}}ni{\v{c}}, P. and Turk, G. and Kousha, K. and Abdoli, M. and Kowalczuk, MK. and Dudbridge, F. and Nanda, S. and Harriman, SL. and Moylan, EC. and Kratz, JE. and Strasser, C. and Lansingh, VC. and Carter, MJ. and Larivi{\`{e}}re, V. and Sugimoto, CR. and Macaluso, B. and Milojevi{\'{c}}, S. and Cronin, B. and Thelwall, M. and Lawrence, S. and Lawson, S. and Linksvayer, M. and McCabe, MJ. and Snyder, CM. and McCabe, MJ. and Snyder, CM. and Metcalfe, TS. and Michener, WK. and {MIT Libraries}, Scholarly Publishing and Murray-Rust, P. and Neylon, C. and Pollock, R. and Wilbanks, J. and of Health, National Institutes and of Health, National Institutes and Foundation, National Science and Group, Nature Publishing and NWO and Neuberger, J. and Counsell, C. and Norris, M. and Oppenheim, C. and Rowland, F. and Knowledge, Open and Badges, Open Research and Collaboration, Open Science and Collaboration, Open Science and Collaboration, Open Science and Initiative, Open Source and Oransky, I. and Marcus, A. and Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V. and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P. and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E. and Staff, PeerJ and Phillips, DP. and Kanter, EJ. and Bednarczyk, B. and Tastad, PL. and Pienta, AM. and Alter, GC. and Lyle, JA. and Piwowar, HA. and Vision, TJ. and Editors, PLOS Medicine and Poline, J-B. and Breeze, JL. and Ghosh, S. and Gorgolewski, K. and Halchenko, YO. and Hanke, M. and Haselgrove, C. and Helmer, KG. and Keator, DB. and Marcus, DS. and Poldrack, RA. and Schwartz, Y. and Ashburner, J. and Kennedy, DN. and of Science, Public Library and Publons and Redhead, C. and Network, Research Information and Rockey, S. and Sahu, DK. and Gogtay, NJ. and Bavdekar, SB. and Schwarz, GJ. and RC, . Kennicutt and Sch{\"{o}}nbrodt, F. and Commons, Science and Sears, JRL. and Seglen, PO. and Shamir, L. and Wallin, JF. and Allen, A. and Berriman, B. and Teuben, P. and Nemiroff, RJ. and Mink, J. and Hanisch, RJ. and DuPrie, K. and SHERPA/RoMEO and SHERPA/JULIET and Solomon, DJ. and SPARC and Europe, SPARC and Springer and Stodden, V. and Guo, P. and Ma, Z. and Stodden, VC. and Suber, P. and Suber, P. and Swan, A. and Gargouri, Y. and Hunt, M. and Harnad, S. and Swan, A. and UNESCO and of Li{\`{e}}ge, University and Noorden, R. Van and Noorden, R. Van and van Rooyen, S. and Delamothe, T. and Evans, SJ. and van Rooyen, S. and Godlee, F. and Evans, S. and Black, N. and Smith, R. and Vandewalle, P. and Senate, Virginia Commonwealth University Faculty and Wagner, B. and Walsh, E. and Rooney, M. and Appleby, L. and Wilkinson, G. and Wang, X. and Liu, C. and Mao, W. and Fang, Z. and Trust, Wellcome and Trust, Wellcome and Trust, Wellcome and Trust, Wellcome and West, JD. and Bergstrom, T. and Bergstorm, CT. and Whitmire, A. and Briney, K. and Nurnberger, A. and Henderson, M. and Atwood, T. and Janz, M. and Kozlowski, W. and Lake, S. and Vandegrift, M. and Zilinski, L. and Wicherts, JM. and Wikipedia and Willinsky, J. and Wilsdon, J. and Allen, L. and Belfiore, E. and Campbell, P. and Curry, S. and Hill, S. and Jones, R. and Kain, R. and Kerridge, S. and Thelwall, M. and Tinkler, J. and Viney, I. and Wouters, P. and Hill, J. and Johnson, B. and Wohlrabe, K. and Birkmeier, D. and Xia, J. and Nakanishi, K. and Xu, L. and Liu, J. and Fang, Q. and Zawacki-Richter, O. and Anderson, T. and Tuncay, N. and Zhang, Y.},
 doi = {10.7554/eLife.16800},
-file = {:Users/ian/mendeley-watch-folder/e16800-download.pdf:pdf},
+file = {::},
 issn = {2050-084X},
 journal = {eLife},
 keywords = {none,open access,open data,open science,open source,research},
@@ -384,26 +409,11 @@ year = {2016}
 abstract = {Data sharing is essential for the conduct of cutting-edge research and is increasingly required by funders concerned with maximising the scientific yield from research data collections. International research consortia are encouraged to share data intra-consortia, inter-consortia and with the wider scientific community. Little is reported regarding the factors that hinder or facilitate data sharing in these different situations. This paper provides results from a survey conducted in the European Network for Genetic and Genomic Epidemiology (ENGAGE) that collected information from its participating institutions about their data-sharing experiences. The questionnaire queried about potential hurdles to data sharing, concerns about data sharing, lessons learned and recommendations for future collaborations. Overall, the survey results reveal that data sharing functioned well in ENGAGE and highlight areas that posed the most frequent hurdles for data sharing. Further challenges arise for international data sharing beyond the consortium. These challenges are described and steps to help address these are outlined. INTRODUCTION The data-sharing landscape has changed considerably in the last decade due to several factors. First, data sharing is essential to study complex disease aetiology. This has catalysed the formation of international research consortia, each of which must tackle data-sharing issues. The more recent practice of inter-consortia collabora-tions adds yet another layer of complexity to data-sharing solutions and protocols. Second, data sharing is increasingly encouraged by the scientific community and by research funders 1–5 in order to maximise the scientific returns from the data. Third, data sharing raises ethical and legal issues related to the privacy of research participants, which were often not foreseen when cohorts were established. Today, a typical consortium project in genomic sciences must develop solutions for data sharing that span intra-consortium, inter-consortium and sharing with scientific community at large. How easy is it for researchers and projects to fulfil the data-sharing requirements of today's science? Although the literature has emerged concerning the ethical and legal considerations surrounding data sharing, 6–10 there is relatively little guidance for scientists on steps that could be undertaken to facilitate data sharing in consortia projects that need to negotiate this landscape. 11,12 This paper reports on the data-sharing experiences of the European Network for Genetic and Genomic Epidemiology (ENGAGE). 13 The information is based on survey responses from ENGAGE partners who answered questions about situations encountered and provided recommendations to improve data sharing. We describe these results in the context of the data-sharing principles developed within ENGAGE and articulate other data-sharing challenges and solutions of the consortium, including data sharing post ENGAGE. ENGAGE was established in 2008 with the main objective to share and analyse the wealth of data from a number of already-established cohort data sets. 13 At project start, the consortium, funded by the 7 th Framework Programme-Health Theme of the European Commission, comprised data from more than 80 000 genome-wide association scans and DNA and serum/plasma samples from over 600 000 individuals. During its 5-year duration (2008–2012), the 24 research organisations participating in ENGAGE have shared and analysed primarily Genome-wide association studies (GWAS) data to identify hundreds of genetic loci influencing dozens of medically-significant traits, ranging from type 2 diabetes and obesity, to smoking behaviour and birth weight. These discoveries resulted in approximately 170 publications as per August 2012, many of these in high-impact international journals, and more papers are under preparation. 13},
 author = {Budin-Lj{\o}sne, Isabelle and Isaeva, Julia and Knoppers, Bartha Maria and Tass{\'{e}}, Anne Marie and Shen, Huei-Yi and Mccarthy, Mark I and Consortium, Engage and Harris, Jennifer R},
 doi = {10.1038/ejhg.2013.131},
-file = {:Users/ian/Library/Application Support/Mendeley Desktop/Downloaded/Budin-Lj{\o}sne et al. - 2013 - Data sharing in large research consortia experiences and recommendations from ENGAGE.pdf:pdf},
+file = {::},
 journal = {European Journal of Human Genetics advance online publication},
 keywords = {biobanks,consortia,data sharing,genetic research},
 title = {{Data sharing in large research consortia: experiences and recommendations from ENGAGE}},
 year = {2013}
-}
-@article{Altman2015,
-author = {Altman, Micah and Borgman, Christine and Crosas, Merc{\`{e}} and Matone, Maryann},
-doi = {10.1002/bult.2015.1720410313},
-file = {:Users/ian/Library/Application Support/Mendeley Desktop/Downloaded/Altman et al. - 2015 - An introduction to the joint principles for data citation.pdf:pdf},
-issn = {00954403},
-journal = {Bulletin of the American Society for Information Science and Technology},
-keywords = {access to resources,citation analysis,data curation,data sets,source materials},
-month = {feb},
-number = {3},
-pages = {43--45},
-title = {{An introduction to the joint principles for data citation}},
-url = {http://doi.wiley.com/10.1002/bult.2015.1720410313},
-volume = {41},
-year = {2015}
 }
 @article{,
 doi = {10.2481/dsj.OSOM13-043},
@@ -429,6 +439,21 @@ url = {http://www.nature.com/doifinder/10.1038/508312a},
 volume = {508},
 year = {2014}
 }
+@article{Altman2015,
+author = {Altman, Micah and Borgman, Christine and Crosas, Merc{\`{e}} and Matone, Maryann},
+doi = {10.1002/bult.2015.1720410313},
+file = {::},
+issn = {00954403},
+journal = {Bulletin of the American Society for Information Science and Technology},
+keywords = {access to resources,citation analysis,data curation,data sets,source materials},
+month = {feb},
+number = {3},
+pages = {43--45},
+title = {{An introduction to the joint principles for data citation}},
+url = {http://doi.wiley.com/10.1002/bult.2015.1720410313},
+volume = {41},
+year = {2015}
+}
 @article{Kaye2009,
 author = {Kaye, Jane and Heeney, Catherine and Hawkins, Naomi and de Vries, Jantina and Boddington, Paula},
 doi = {10.1038/nrg2573},
@@ -446,7 +471,7 @@ year = {2009}
 abstract = {The underlying ethos of dbGaP is that access to these data by secondary data analysts facilitates advancement of science. NIH has required that genome-wide association study data be deposited in the Database of Genotypes and Phenotypes (dbGaP) since 2003. In 2013, a proposed updated policy extended this requirement to next-generation sequencing data. However, recent literature and anecdotal reports suggest lingering logistical and ethical concerns about subject identifiability, informed consent, publication embargo enforcement, and difficulty in accessing dbGaP data. We surveyed the International  Genetic Epidemiology Society (IGES) membership about their experiences. One hundred and seventy five (175) individuals completed the survey, a response rate of 27{\%}.  Of respondents who received data from dbGaP (43{\%}), only 32{\%} perceived the application process as easy but most (75{\%}) received data within five months. Remaining challenges include difficulty in identifying an institutional signing official and an overlong application process. Only 24{\%} of respondents had contributed data to dbGaP. Of these, 31{\%} reported local IRB restrictions on data release; an additional 15{\%} had to reconsent study participants before depositing data. The majority of respondents (56{\%}) disagreed that the publication embargo period was sufficient. In response, we recommend longer embargo periods and use of varied data-sharing models rather than a one-size-fits-all approach.},
 author = {Simpson, Claire and Goldenberg, Aaron and Culverhouse, Rob and Daley, Denise and Igo, Robert and Jarvik, Gail and Mandal, Diptasri and Mascalzoni, Deborah and Montgomery, Courtney and Pierce, Brandon and Plaetke, Rosemarie and Shete, Sanjay and Goddard, Katrina and Stein, Catherine},
 doi = {10.3390/ijerph110808383},
-file = {:Users/ian/Library/Application Support/Mendeley Desktop/Downloaded/Simpson et al. - 2014 - Practical Barriers and Ethical Challenges in Genetic Data Sharing.pdf:pdf},
+file = {::},
 issn = {1660-4601},
 journal = {International Journal of Environmental Research and Public Health},
 keywords = {ELSI,GWAS,collaboration,data sharing,ethics,identifiability,publication  embargo},
@@ -493,7 +518,7 @@ year = {2013}
 abstract = {This issue of the Journal of Empirical Research on Human Research Ethics highlights the ethical issues that arise when researchers conducting projects in low- and middle-income countries seek to share the data they produce. Although sharing data is considered a best practice, the barriers to doing so are considerable and there is a need for guidance and examples. To that end, the authors of this article reviewed the articles in this special issue to identify challenges common to the five countries and to offer some practical advice to assist researchers in navigating this "uncharted territory," as some termed it. Concerns around informed consent, data management, data dissemination, and validation of research contributions were cited frequently as particularly challenging areas, so the authors focused on these four topics with the goal of providing specific resources to consult as well as examples of successful projects attempting to solve many of the problems raised.},
 author = {Alter, George C and Vardigan, Mary},
 doi = {10.1177/1556264615591561},
-file = {:Users/ian/Library/Application Support/Mendeley Desktop/Downloaded/Alter, Vardigan - 2015 - Addressing Global Data Sharing Challenges.pdf:pdf},
+file = {::},
 issn = {1556-2654},
 journal = {Journal of empirical research on human research ethics : JERHRE},
 keywords = {data repositories,data sharing,informed consent,open science,privacy of human subjects},
@@ -506,18 +531,4 @@ title = {{Addressing Global Data Sharing Challenges.}},
 url = {http://www.ncbi.nlm.nih.gov/pubmed/26297753 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC4547313},
 volume = {10},
 year = {2015}
-}
-@article{CERN-DATA,
-archivePrefix = {arXiv},
-arxivId = {https://arxiv.org/abs/0912.0255},
-author = {CERN},
-eprint = {/arxiv.org/abs/0912.0255},
-file = {:Users/ian/Library/Application Support/Mendeley Desktop/Downloaded/Unknown - 2009 - Data Preservation in High-Energy Physics.pdf:pdf},
-keywords = {DPHEP-2009-001},
-mendeley-tags = {DPHEP-2009-001},
-number = {May},
-pages = {1--18},
-primaryClass = {https:},
-title = {{Data Preservation in High-Energy Physics}},
-year = {2009}
 }
